# mappingPlatformHardwareDriver

./: .gitmodules  CMakeLists.txt  README.md
estimateMathModel/: CMakeLists.txt  expandRange.m  loadData.m  main.cpp  readFile.m
estimateMathModel/dataFiles/: measureMappingRobot1.txt  measureMappingRobot2.txt  measureMappingRobot3.txt  measureMappingRobot4.txt  measureMove.txt  measureMoveBackward.txt  measureWithWheels1.txt  measureWithWheels2.txt
estimateMathModel/dataFiles/enginesMeasurement/: engineL_-100.txt  engineL_-50.txt  engineL_-75.txt  engineL_100.txt  engineL_50.txt  engineL_75.txt  engineR_-100.txt  engineR_-50.txt  engineR_-75.txt  engineR_100.txt  engineR_50.txt  engineR_75.txt
estimateMathModel/scenarios/: EnginesModels.cpp  RobotMovement.cpp  RobotRotation.cpp
moduleTests/: CMakeLists.txt  main.cpp
moduleTests/mocks/: ModelEncoderParser.hh  ModelEngine.cpp  ModelEngine.hh
moduleTests/scenarios/: EngineModel.hh  NormalMode_scenario.cpp  TuneMovePID_scenario.cpp  TuneRotatePID_scenario.cpp
src/: CMakeLists.txt  src.cmake
src/RaspberryPiInterface/: SPIparser.cpp  SPIparser.hh  SPIprotocol.hh  SPIprotocol_Ifc.hh
src/RaspberryPiInterface/strategies/: AllDataUsed_Strategy.cpp  AllDataUsed_Strategy.hh  Battery_Strategy.cpp  Battery_Strategy.hh  DistanceMeasure_Strategy.cpp  DistanceMeasure_Strategy.hh  Double_Strategy.cpp  Double_Strategy.hh  Position_Strategy.cpp  Position_Strategy.hh  StrategySPI_ifc.hh  TransmissionKey_Strategy.cpp  TransmissionKey_Strategy.hh
src/mainLogic/: Log.hh  Position.cpp  Position.hh  StrategyManager.cpp  StrategyManager.hh
src/mainLogic/ModeStrategies/: ModeStrategy_ifc.hh  NormalMode.cpp  NormalMode.hh  TuneMovePID.cpp  TuneMovePID.hh  TuneRotatePID.cpp  TuneRotatePID.hh
src/platform/: AHRS.cpp  AHRS.hh  BatteryObserver.cpp  BatteryObserver.hh  ComplementaryFilter.cpp  ComplementaryFilter.hh  ConfigurationProvider.cpp  ConfigurationProvider.hh  EncoderMenager.cpp  EncoderMenager.hh  EncoderParser.hh  EncoderParserIfc.hh  Kalman.cpp  Kalman.hh  PID.cpp  PID.hh  StepingMeanFilter.cpp  StepingMeanFilter.hh
stm32/: .cproject  .mxproject  .project  CMakeLists.txt  STM_Platform.ioc  STM_platform.xml  toolchain.cmake
stm32/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_adc_ex.cpp  stm32f4xx_hal_flash_ex.cpp  stm32f4xx_hal_pwr.cpp
stm32/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
stm32/Src/: GPIOconf.hh  InterfacesConf.hh  InterruptFunctions.hh  main.cpp  stm32f4xx_hal_msp.cpp  stm32f4xx_it.cpp
tools/: Models.cpp  Models.hh  OwnExceptions.hh  matplotlib.cpp  plot.hh  uartToFile.cpp  uartToFile.hh
unitTests/: CMakeLists.txt  main.cpp  src.cmake
unitTests/RaspberryPiInterface/: SPIparser_test.cpp  SPIprotocol_test.cpp
unitTests/RaspberryPiInterface/strategies/: AllDataUsed_Strategy_test.cpp  Battery_Strategy_test.cpp  DistanceMeasure_Strategy_test.cpp  Double_Strategy_test.cpp  Position_Strategy_test.cpp  TransmissionKey_Strategy_test.cpp
unitTests/mainLogic/: Log_test.cpp  Position_test.cpp
unitTests/mainLogic/ModeStrategies/: NormalMode_test.cpp  TuneMovePID_test.cpp  TuneRotatePID_test.cpp
unitTests/platform/: BatteryObserver_test.cpp  ConfigurationProvider_test.cpp  EncoderMenager_test.cpp  EncoderParser_test.cpp
